# SE-KD3x

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  run_distillation.py  the_paper.tex
examples/: README.md  run_full_kd.sh  run_sekd.sh  run_sekd3x.sh
rethinking-selective-kd/: config.py  run_registry.py
rethinking-selective-kd/data/: dataset.py
rethinking-selective-kd/distill/: SELECTIVE_LM_HEAD_README.md  ce_estimators.py  compute_skip.py  forward_batch_runner.py  oom_setup_helper.py  sample_skipper.py  trainer.py
rethinking-selective-kd/distill/_mixins/: amp_oom.py  bandit.py  checkpoint.py
rethinking-selective-kd/distill/losses/: __init__.py
rethinking-selective-kd/evaluations/: benchmark_tasks.yaml  eval.py  utils.py
rethinking-selective-kd/evaluations/ifeval/: evaluation_main.py
rethinking-selective-kd/logging/: wandb_utils.py
rethinking-selective-kd/training/: distiller.py  distributed.py  entrypoint_utils.py  offline_cache.py
sekd/: __init__.py  cli.py  config.py  seed_allocator.py
sekd/data/: cache.py
sekd/distill/: SELECTIVE_LM_HEAD_README.md  __init__.py  atkd.py  forward_batch_runner.py  on_policy.py  sample_skipper.py  selective_lm_head.py  trainer.py
sekd/distill/_mixins/: __init__.py  cache.py  kd_core.py  rs_vocab.py  selection_scoring.py  token_entropy_logger.py
sekd/distill/losses/: udkd.py
sekd/evaluations/: lm_eval_entry.py
sekd/evaluations/ifeval/: README.md  instructions.py  instructions_util.py
sekd/evaluations/ifeval/data/: __init__.py
sekd/models/: loader.py
sekd/training/: distiller.py  distributed.py  linucb_controller.py
tests/: test_cache_issues.py  test_ce_elimination_estimator.py  test_data_cache_writer.py  test_offline_cache_signature.py  test_on_policy_distiller.py  test_rs_kd_hyperparams.py  test_rskd_config_and_performance.py  test_trainer_cached_kd_loss.py  test_trainer_invalid_targets.py  test_vectorized_cache.py
tools/: build_offline_cache_ddp.py
